--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <h1>Tallow Ingredients</h1>
-<text>rosehip oil, coconut oil, borage oil, neroli oil, helichrysum oil, rose oil, frankincense oil, ylang ylang oil, vitamin e oil, beef tallow</text>
+<text>rosehip oil, 
+  coconut oil, 
+  borage oil, 
+  neroli oil, 
+  helichrysum oil, 
+  rose oil, 
+  frankincense oil, 
+  ylang ylang oil, 
+  vitamin e oil, 
+  beef tallow</text>
