--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <h1>Tallow Ingredients</h1>
-<text>rosehip oil, 
-  coconut oil, 
-  borage oil, 
-  neroli oil, 
-  helichrysum oil, 
-  rose oil, 
-  frankincense oil, 
-  ylang ylang oil, 
+<text>rosehip oil, coconut oil, borage oil, neroli oil, helichrysum oil, rose oil, frankincense oil, ylang ylang oil, 
   vitamin e oil, 
   beef tallow</text>
+
+<h1>NUTRIENT-RICH COMPOSITION OF TALLOW</h1>
+<text>Tallow's benefits stem from its nutrient density, packed with vitamins that are crucial for skin and body health: </text>
+<list>Vitamin A: Promotes skin regeneration, reducing wrinkles and maintaining a youthful appearance.</list>
+<list>Vitamin D: Supports collagen production, enhancing skin elasticity and strength</list>
+<list>Vitamin E: A powerful antioxidant that protects against oxidative stress and environmental damage.</list>
+<list>Vitamin K2: Reduces dark circles and promotes skin healing processes. </list>
+<text>These vitamins work synergistically to nourish the skin, promote a radiant complexion, and repair damaged tissues.</text>
+
+<h1>FATTY ACID PROFILE AND ITS ROLE IN SKIN HEALTH</h1>
+<text>Tallow's fatty acid composition is highly compatible with human skin, making it an excellent moisturizer without clogging pores: </text>
+<list>Stearic Acid: Repairs the skin barrier and maintains moisture levels.</list>
+<list>Oleic Acid: Enhances absorption, allowing deeper penetration of nutrients into the skin.</list>
+<list>Palmitic Acid: Provides soothing properties while forming an occlusive layer to prevent dryness.</list>
+<list>Palmitoleic Acid: Offers anti-aging benefits by promoting elasticity and reducing fine lines. </list>
+
+<h2>SKIN CONDITIONS AND TALLOW'S HEALING PROPERTIES</h2>
+<subtext>Tallow's compatibility with skin's natural oils and its nutrient density make it effective for addressing various skin conditions: </subtext>
+<list>Acne and Scarring: Anti-inflammatory and antimicrobial properties help reduce breakouts and support scar healing.</list>
+<list>Eczema and Psoriasis: Soothes dryness and irritation while aiding in skin barrier repair.</list>
+<list>Dry and Aging Skin: Deeply hydrates, reduces wrinkles, and improves skin elasticity, making it ideal for mature skin. </list>
+
+<text>Neroli oil- extracted from the flowers of the bitter orange tree, has numerous benefits, including:</text>
+Skin Health- Reduces inflammation and irritation, Improves skin tone and elasticity, Fights acne and blemishes, and Delays signs of aging. </text>
+<text>Borage oil-is a nutritional supplement derived from the seeds of the borage plant, 
+also known as the starflower. lt is a rich source of gamma-linolenk acid (GLA), </text>
+<text>an omega-6 fatty acid with potent anti-inflammatory properties that is responsible for many of its purported health benefits. 
+Skin health 
+<text>Borage oil is widely used in skincare and may offer several benefits for skin issues.</text>
+<list>Moisturizes and hydrates: lt helps to restore the skin's moisture barrier, making it an excellent treatment for dry, irritated skin.</list>  
+<list>Soothes inflammation: It can help reduce inflammation, which may benefit those with conditions such as eczema and psoriasis. 
+  However, scientific evidence on its effectiveness for eczema is mixed, with some studies showing no benefit over a placebo.</list>
+  <li>Combats signs of aging: As an antioxidant, it can help fight free radicals, which contribute to the signs of aging.</li>
+  <li>Balances acne-prone skin: It moisturizes without clogging pores and may help with hormonal acne due to its influence on prostaglandins. </li>
+
+  
