--- a/index.html
+++ b/index.html
@@ -37,4 +37,14 @@ Skin health
   <li>Combats signs of aging: As an antioxidant, it can help fight free radicals, which contribute to the signs of aging.</li>
   <li>Balances acne-prone skin: It moisturizes without clogging pores and may help with hormonal acne due to its influence on prostaglandins. </li>
 
+<text>Helichrysum oil-derived from the Helichrysum italicum plant, is valued in traditional medicine for its anti-inflammatory, antimicrobial, and antioxidant
+properties. While much of the scientific research is preliminary, involving small, in-vitro, or animal studies, it suggests potential benefits for skin health,
+pain relief and emotional wellness.</text>
+  <text>Helichrysum is often referred to as the 'immortelle' or 'everlasting flower' because of its use in skin rejuvenation. </text>
+    <li>Anti-aging: The oil's powerful antioxidant properties combat free-radical damage and oxidative stress, which can help reduce the appearance of fine lines, 
+    wrinkles, and age spots.</li>
+    <li>Wound healing: With antimicrobial and anti-inflammatory properties, helichrysum can support the healing of wounds, cuts, and burns. It promotes cell regeneration and can help diminish the appearance of scars.</li>
+    <li>Acne and blemishes· The oil's ability to fight bacteria and reduce inflammation may help treat acne, soothe blemishes, and prevent clogged pores.</li>
+    <li>Bruise reduction: Diluted helichrysum oil applied to unbroken skin may reduce the size and appearance of bruises and ease inflammation. </li>
+
   
