--- a/index.html
+++ b/index.html
@@ -46,5 +46,37 @@ pain relief and emotional wellness.</text>
     <li>Wound healing: With antimicrobial and anti-inflammatory properties, helichrysum can support the healing of wounds, cuts, and burns. It promotes cell regeneration and can help diminish the appearance of scars.</li>
     <li>Acne and blemishes· The oil's ability to fight bacteria and reduce inflammation may help treat acne, soothe blemishes, and prevent clogged pores.</li>
     <li>Bruise reduction: Diluted helichrysum oil applied to unbroken skin may reduce the size and appearance of bruises and ease inflammation. </li>
+<text>Ylang Ylang oil-extracted from the floweIS of the Cananga odorata tree, has numerous benefits for both physical and emotional well-being.</text>
+    <li>Skin Care: Balances oil production, reduces inflammation, and improves skin tone and texture. </li>
+    
+<text>Vitamin E oil: is a potent anitoxidant that offers moisterizing and protective benefits for the skin, though scientific evidence for certain claims
+is limited. It is most effective when used correctly and may not be suitable for all skin types.</text>
+  <text>Benefits of vitmain E oil for skin</text>
+    <li>Antioxidant protection: As a powerful antioxidant, vitamin E oil helps protect the skin from damage caused by free radicals from UV
+    exposure and other environmental stressors. This can help prevent signs of premature aging.</li>
+    <li>Intense moisture: Vitamin E is an excellent moisturizer that can help prevent or treat dry flaky skin. Its thick oil solublenature is effective at restoring and
+    sealing moisture.</li>
+    <li>Soothing inflamed skin: The anti-inflammatory properties of vitamin E can help soothe dry, itchy skin associated with conditions like eczema and psoriasis.
+    However, some topical formulas may irritate existing eczema.</li>
+    <li>Minimizes fine lines: By fighting oxidative damage and keeping the skin moisturized, vitmain E oil can help reduce the appearance of fine lines and
+    wrinkles.</li>
+    <li>Promotes healing: Some research suggests that vitamin E can aid in wound healing when taken orally and topical application may offer similar benefits,
+    but more research is needed.</li>
 
-  
+<text>Rosehip seed oil: Cold-pressed from the seeds and fruit of the rose plant, rosehip seed oil is rich in fatty acids, vitmains, and antioxidants.
+It is often lighter and less fragrant than rose sees essential oil.</text>
+  <text>Benefits of Rosehip seed oil:</text>
+    <li>Anti-aging: Rich in pro-vitmain A (a retinol precursor) and antioxidants, it can reduce the signs of photo-aging and boost collagen production for
+    firmer skin.</li>
+    <li>Brightening: It can help improve an uneven skin tone, lessen dark spots, and reduce the appearcance of scars and stretch marks.</li>
+    <li>Moisturizing: Fatty acids and linoleic acid replenishes and moisturizes the skin.</li>
+    <li>Hydrates and soothes: It provides long-lasting hydration and can soothe dry, dull, or inflamed skin.</li>
+
+<text>Coconut oil: Deeply moisturizing rich in saturated fats and fatty acids. Cocnut oil is an effective emollient that traps moisture adn reduces trans epidermal
+water loss. This keeps dry, flaky, or eczema prone skin hydrated and improves the skin's barrier function.</text>
+  <text>Benefits of Coconut oil:</text>
+    <li>Antimicrobial and antifungal: The high concentration of lauric acid in cocnut oil can kill ance-causing bacteria like Propionbacterium acne
+    as well as other microorganisms.</li>
+    <li>Anti-inflammatory: Virgin coconut oil has been shown to reduce skin inflammation and soothe conditions like atopic dermatitis and psoriasis. 
+    It also acts as an antioxidant, neutralizing free radicals that can cause damage and inflammation.</li>
+    <li>Promotes healing: By boosting collagen levels and improving antioxidants status; coconut oil can help accelerate wound healing and repair the skin.</li>
