--- a/index.html
+++ b/index.html
@@ -1,57 +1,77 @@
 <h1>Tallow Ingredients</h1>
-<text>rosehip oil, coconut oil, borage oil, neroli oil, helichrysum oil, rose oil, frankincense oil, ylang ylang oil, 
-  vitamin e oil, 
-  beef tallow</text>
 
-<h1>NUTRIENT-RICH COMPOSITION OF TALLOW</h1>
-<text>Tallow's benefits stem from its nutrient density, packed with vitamins that are crucial for skin and body health: </text>
-<list>Vitamin A: Promotes skin regeneration, reducing wrinkles and maintaining a youthful appearance.</list>
-<list>Vitamin D: Supports collagen production, enhancing skin elasticity and strength</list>
-<list>Vitamin E: A powerful antioxidant that protects against oxidative stress and environmental damage.</list>
-<list>Vitamin K2: Reduces dark circles and promotes skin healing processes. </list>
+<p>rosehip oil, coconut oil, borage oil, neroli oil, helichrysum oil, rose oil, frankincense oil, ylang ylang oil, 
+  vitamin e oil, beef tallow</p>
+
+<h2>NUTRIENT-RICH COMPOSITION OF TALLOW</h2>
+<p>
+  <text>Tallow's benefits stem from its nutrient density, packed with vitamins that are crucial for skin and body health: </text>
+<ul>
+<li>Vitamin A: Promotes skin regeneration, reducing wrinkles and maintaining a youthful appearance.</li>
+<li>Vitamin D: Supports collagen production, enhancing skin elasticity and strength</li>
+<li>Vitamin E: A powerful antioxidant that protects against oxidative stress and environmental damage.</li>
+<li>Vitamin K2: Reduces dark circles and promotes skin healing processes. </li>
+</ul>
 <text>These vitamins work synergistically to nourish the skin, promote a radiant complexion, and repair damaged tissues.</text>
+</p>
 
-<h1>FATTY ACID PROFILE AND ITS ROLE IN SKIN HEALTH</h1>
-<text>Tallow's fatty acid composition is highly compatible with human skin, making it an excellent moisturizer without clogging pores: </text>
-<list>Stearic Acid: Repairs the skin barrier and maintains moisture levels.</list>
-<list>Oleic Acid: Enhances absorption, allowing deeper penetration of nutrients into the skin.</list>
-<list>Palmitic Acid: Provides soothing properties while forming an occlusive layer to prevent dryness.</list>
-<list>Palmitoleic Acid: Offers anti-aging benefits by promoting elasticity and reducing fine lines. </list>
+<h2>FATTY ACID PROFILE AND ITS ROLE IN SKIN HEALTH</h2>
+<p>
+  <text>Tallow's fatty acid composition is highly compatible with human skin, making it an excellent moisturizer without clogging pores: </text>
+  <ul>
+<li>Stearic Acid: Repairs the skin barrier and maintains moisture levels.</li>
+<li>Oleic Acid: Enhances absorption, allowing deeper penetration of nutrients into the skin.</li>
+<li>Palmitic Acid: Provides soothing properties while forming an occlusive layer to prevent dryness.</li>
+<li>Palmitoleic Acid: Offers anti-aging benefits by promoting elasticity and reducing fine lines. </li>
+  </ul>
+</p>
 
 <h2>SKIN CONDITIONS AND TALLOW'S HEALING PROPERTIES</h2>
-<subtext>Tallow's compatibility with skin's natural oils and its nutrient density make it effective for addressing various skin conditions: </subtext>
-<list>Acne and Scarring: Anti-inflammatory and antimicrobial properties help reduce breakouts and support scar healing.</list>
-<list>Eczema and Psoriasis: Soothes dryness and irritation while aiding in skin barrier repair.</list>
-<list>Dry and Aging Skin: Deeply hydrates, reduces wrinkles, and improves skin elasticity, making it ideal for mature skin. </list>
+<p>
+  <text>Tallow's compatibility with skin's natural oils and its nutrient density make it effective for addressing various skin conditions: </text>
+  <ul>
+<li>Acne and Scarring: Anti-inflammatory and antimicrobial properties help reduce breakouts and support scar healing.</li>
+<li>Eczema and Psoriasis: Soothes dryness and irritation while aiding in skin barrier repair.</li>
+<li>Dry and Aging Skin: Deeply hydrates, reduces wrinkles, and improves skin elasticity, making it ideal for mature skin. </li>
+    </ul>
+</p>
 
-<text>Neroli oil- extracted from the flowers of the bitter orange tree, has numerous benefits, including:</text>
-Skin Health- Reduces inflammation and irritation, Improves skin tone and elasticity, Fights acne and blemishes, and Delays signs of aging. </text>
-<text>Borage oil-is a nutritional supplement derived from the seeds of the borage plant, 
-also known as the starflower. lt is a rich source of gamma-linolenk acid (GLA), </text>
-<text>an omega-6 fatty acid with potent anti-inflammatory properties that is responsible for many of its purported health benefits. 
-Skin health 
+<p><u>Neroli oil</u> - extracted from the flowers of the bitter orange tree, has numerous benefits, including: </p>
+<li>Skin Health- Reduces inflammation and irritation, Improves skin tone and elasticity, Fights acne and blemishes, and Delays signs of aging. </li>
+<p><u>Borage oil</u> -is a nutritional supplement derived from the seeds of the borage plant, 
+also known as the starflower. lt is a rich source of gamma-linolenk acid (GLA), </p>
+<li>an omega-6 fatty acid with potent anti-inflammatory properties that is responsible for many of its purported health benefits.</li>
+<p>Skin health</p> 
 <text>Borage oil is widely used in skincare and may offer several benefits for skin issues.</text>
-<list>Moisturizes and hydrates: lt helps to restore the skin's moisture barrier, making it an excellent treatment for dry, irritated skin.</list>  
-<list>Soothes inflammation: It can help reduce inflammation, which may benefit those with conditions such as eczema and psoriasis. 
-  However, scientific evidence on its effectiveness for eczema is mixed, with some studies showing no benefit over a placebo.</list>
-  <li>Combats signs of aging: As an antioxidant, it can help fight free radicals, which contribute to the signs of aging.</li>
-  <li>Balances acne-prone skin: It moisturizes without clogging pores and may help with hormonal acne due to its influence on prostaglandins. </li>
+<ul>
+<li>Moisturizes and hydrates: lt helps to restore the skin's moisture barrier, making it an excellent treatment for dry, irritated skin.</li>  
+<li>Soothes inflammation: It can help reduce inflammation, which may benefit those with conditions such as eczema and psoriasis. 
+  However, scientific evidence on its effectiveness for eczema is mixed, with some studies showing no benefit over a placebo.</li>
+<li>Combats signs of aging: As an antioxidant, it can help fight free radicals, which contribute to the signs of aging.</li>
+<li>Balances acne-prone skin: It moisturizes without clogging pores and may help with hormonal acne due to its influence on prostaglandins. </li>
+</ul>
 
-<text>Helichrysum oil-derived from the Helichrysum italicum plant, is valued in traditional medicine for its anti-inflammatory, antimicrobial, and antioxidant
+<p><u>Helichrysum oil</u>-derived from the Helichrysum italicum plant, is valued in traditional medicine for its anti-inflammatory, antimicrobial, and antioxidant
 properties. While much of the scientific research is preliminary, involving small, in-vitro, or animal studies, it suggests potential benefits for skin health,
-pain relief and emotional wellness.</text>
+pain relief and emotional wellness.</p>
   <text>Helichrysum is often referred to as the 'immortelle' or 'everlasting flower' because of its use in skin rejuvenation. </text>
+<ul>
     <li>Anti-aging: The oil's powerful antioxidant properties combat free-radical damage and oxidative stress, which can help reduce the appearance of fine lines, 
     wrinkles, and age spots.</li>
     <li>Wound healing: With antimicrobial and anti-inflammatory properties, helichrysum can support the healing of wounds, cuts, and burns. It promotes cell regeneration and can help diminish the appearance of scars.</li>
     <li>Acne and blemishes· The oil's ability to fight bacteria and reduce inflammation may help treat acne, soothe blemishes, and prevent clogged pores.</li>
     <li>Bruise reduction: Diluted helichrysum oil applied to unbroken skin may reduce the size and appearance of bruises and ease inflammation. </li>
-<text>Ylang Ylang oil-extracted from the floweIS of the Cananga odorata tree, has numerous benefits for both physical and emotional well-being.</text>
+  </ul>
+
+<p><u>Ylang Ylang oil</u>-extracted from the floweIS of the Cananga odorata tree, has numerous benefits for both physical and emotional well-being.</p>
+<ul>
     <li>Skin Care: Balances oil production, reduces inflammation, and improves skin tone and texture. </li>
+</ul>
     
-<text>Vitamin E oil: is a potent anitoxidant that offers moisterizing and protective benefits for the skin, though scientific evidence for certain claims
-is limited. It is most effective when used correctly and may not be suitable for all skin types.</text>
+<p><u>Vitamin E oil</u>- is a potent anitoxidant that offers moisterizing and protective benefits for the skin, though scientific evidence for certain claims
+is limited. It is most effective when used correctly and may not be suitable for all skin types.</p>
   <text>Benefits of vitmain E oil for skin</text>
+<ul>
     <li>Antioxidant protection: As a powerful antioxidant, vitamin E oil helps protect the skin from damage caused by free radicals from UV
     exposure and other environmental stressors. This can help prevent signs of premature aging.</li>
     <li>Intense moisture: Vitamin E is an excellent moisturizer that can help prevent or treat dry flaky skin. Its thick oil solublenature is effective at restoring and
@@ -62,21 +82,26 @@ is limited. It is most effective when used correctly and may not be suitable for
     wrinkles.</li>
     <li>Promotes healing: Some research suggests that vitamin E can aid in wound healing when taken orally and topical application may offer similar benefits,
     but more research is needed.</li>
+</ul>
 
-<text>Rosehip seed oil: Cold-pressed from the seeds and fruit of the rose plant, rosehip seed oil is rich in fatty acids, vitmains, and antioxidants.
-It is often lighter and less fragrant than rose sees essential oil.</text>
+<p><u>Rosehip seed oil</u>- Cold-pressed from the seeds and fruit of the rose plant, rosehip seed oil is rich in fatty acids, vitmains, and antioxidants.
+It is often lighter and less fragrant than rose sees essential oil.</p>
   <text>Benefits of Rosehip seed oil:</text>
+<ul>
     <li>Anti-aging: Rich in pro-vitmain A (a retinol precursor) and antioxidants, it can reduce the signs of photo-aging and boost collagen production for
     firmer skin.</li>
     <li>Brightening: It can help improve an uneven skin tone, lessen dark spots, and reduce the appearcance of scars and stretch marks.</li>
     <li>Moisturizing: Fatty acids and linoleic acid replenishes and moisturizes the skin.</li>
     <li>Hydrates and soothes: It provides long-lasting hydration and can soothe dry, dull, or inflamed skin.</li>
+  </ul>
 
-<text>Coconut oil: Deeply moisturizing rich in saturated fats and fatty acids. Cocnut oil is an effective emollient that traps moisture adn reduces trans epidermal
-water loss. This keeps dry, flaky, or eczema prone skin hydrated and improves the skin's barrier function.</text>
+<p><u>Coconut oil</u>- Deeply moisturizing rich in saturated fats and fatty acids. Cocnut oil is an effective emollient that traps moisture adn reduces trans epidermal
+water loss. This keeps dry, flaky, or eczema prone skin hydrated and improves the skin's barrier function.</p>
   <text>Benefits of Coconut oil:</text>
+<ul>
     <li>Antimicrobial and antifungal: The high concentration of lauric acid in cocnut oil can kill ance-causing bacteria like Propionbacterium acne
     as well as other microorganisms.</li>
     <li>Anti-inflammatory: Virgin coconut oil has been shown to reduce skin inflammation and soothe conditions like atopic dermatitis and psoriasis. 
     It also acts as an antioxidant, neutralizing free radicals that can cause damage and inflammation.</li>
     <li>Promotes healing: By boosting collagen levels and improving antioxidants status; coconut oil can help accelerate wound healing and repair the skin.</li>
+</ul>
