--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <p><u>Neroli oil</u> - extracted from the flowers of the bitter orange tree, has numerous benefits, including: </p>
 <li>Skin Health- Reduces inflammation and irritation, Improves skin tone and elasticity, Fights acne and blemishes, and Delays signs of aging. </li>
 <p><u>Borage oil</u> -is a nutritional supplement derived from the seeds of the borage plant, 
-also known as the starflower. lt is a rich source of gamma-linolenk acid (GLA), </p>
-<li>an omega-6 fatty acid with potent anti-inflammatory properties that is responsible for many of its purported health benefits.</li>
+also known as the starflower. lt is a rich source of gamma-linolenk acid (GLA), an omega-6 fatty acid with potent anti-inflammatory properties 
+  that is responsible for many of its purported health benefits.</p>
 <p>Skin health</p> 
 <text>Borage oil is widely used in skincare and may offer several benefits for skin issues.</text>
 <ul>
