--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </p>
 
 <p><u>Neroli oil</u> - extracted from the flowers of the bitter orange tree, has numerous benefits, including: </p>
-<li>Skin Health- Reduces inflammation and irritation, Improves skin tone and elasticity, Fights acne and blemishes, and Delays signs of aging. </li>
+<p>Skin Health- Reduces inflammation and irritation, Improves skin tone and elasticity, Fights acne and blemishes, and Delays signs of aging. </p>
 <p><u>Borage oil</u> -is a nutritional supplement derived from the seeds of the borage plant, 
 also known as the starflower. lt is a rich source of gamma-linolenk acid (GLA), an omega-6 fatty acid with potent anti-inflammatory properties 
   that is responsible for many of its purported health benefits.</p>
